# lookae

./: .env.example  .gitignore  README.md  build_vector_index.py  lang.py  main.py  pyproject.toml  requirements.txt  semantic_search.py  test.py
core/: model_pool.py  task.py
langchain/: task.py  user_prompt.py  utils.py
lookae_spider/: __init__.py  ai_md.py  config.py  crawler.py  extractors.py
outputs/: -MASK形状遮罩图层路径倒角预设AE脚本 Vertex Tool v1.1.json  1000组 LUTs 专业电影调色预设 – 多软件支持 Lookae – YIQIAN LUTs (2015).json  100种三维化妆产品包装瓶宣传展示动画AE模板脚本 Cosmetics Promo Builder.json  117组 LUTs 专业电影调色预设 Mastin Labs – Fuji, Portra, Ilford Pack cubes & 3dl.json  120个电影大片婚礼个性Instagram风格LUTs调色预设（AEPRFCPX达芬奇PS）.json  12组索尼Sony摄像机专用视频调色LUTs预设（AEPRFCPXPS达芬奇OFX）.json  136组多格式 LUTs 专业电影调色预设 Lookae – DUOGESHI LUTs (136).json  138种电影大片级专业电影LUTs调色预设 Teal And Orange – Standard Pack (RMN) Luts And Presets.json  140种材质贴图+37种三维倒角预设 E3D工具包 Element 3D Toolkit.json  1500个现代字幕条标题呼出指示线文字排版动画AE脚本 Titles Pro V3+AI源文件.json  150多个可提高效率的快捷命令工具箱AE脚本 MoBar V2.1+使用教程.json  16种黑白风格专业电影LUTs调色预设 Black White Films WinMac.json  185种炫酷电影婚礼明亮浪漫冷暖LUTs调色预设（FCPXPRPSAE）.json  200组LUTs专业电影调色预设 Lutify.me Professional 3D LUTs Package.json  200组大疆航拍无人机暖色调LUTs电影预设 Phoenix Warm-Toned Color Grading LUTs for Drones.json  2014年AE脚本大合集 AEScripts Collections Sep2014.json  2015年6月AE脚本大合集 AEScripts Collections JUN 2015（WinMac）.json  2015年AE脚本大合集 AEScripts Collections Mar 2015（WinMac）.json  2016年AE脚本大合集 AE Scripts Collections LookAE 2016（WinMac）.json  2018年AE脚本大合集 AE Scripts Collections LookAE WinMac.json  204种电影大片级别专业电影LUTs调色预设 Professional Luts Collection.json  205种动作电影大片美容润肤梦幻复古LUTs调色预设 Vivid PRO LUTs WinMac.json  22G 三维纹理材质贴图大合集 3D Total texture 1-19 DVD bundle.json  22组 LUTs 专业电影调色达芬奇预设 Sonduck LUTS Pack (WinMac).json  2380个多类型多风格电影视频调色LUTs预设（AEPRFCPXPS达芬奇OFX）.json  23种浪漫唯美婚礼 LUTs 电影调色预设 LAPARDIN WEDLUTS.json  24组大疆航拍无人机视频调色LUTs预设（AEPRFCPXPS达芬奇OFX）.json  25组 LUTs 专业电影调色预设 SpeedLooks Cine Luts Packages (WinMac).json  (+4062 more)
scripts/: README.md  (+4 more)
(+4578 files in other folders)
